css/index.css
.width-100 {
  width: 100%;
}
.border-bottom-grey {
  border-bottom: 1px solid gray;
}
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
.container-nav {
  max-width: 500px;
}
.container-nav #logo-icon {
  color: #42f4b9;
  font-size: 50px;
  position: absolute;
}
.container-nav .mobile-hidden {
  display: none;
}
@media (min-width: 800px) {
  .container-nav {
    max-width: 800px;
  }
  .container-nav .tablet-hidden {
    display: none;
  }
  .container-nav .mobile-hidden {
    display: flex;
    flex-direction: row;
  }
}
@media (min-width: 800px) {
  .container-nav .nav-container {
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 50px;
  }
  .container-nav .nav-container .nav-links {
    width: 70%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    text-decoration: none;
  }
  .container-nav .nav-container .nav-links a {
    text-decoration: none;
    font-size: 1.2em;
    color: #42f4b9;
  }
  .container-nav .nav-container .nav-links a:hover {
    color: orangered;
  }
  .container-nav .nav-container #logo-icon-container {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    width: 30%;
    font-size: 2em;
  }
  .container-nav .nav-container #logo-icon-container #logo-icon {
    color: #42f4b9;
  }
}
footer {
  margin: 100px 0 20px 0;
  display: flex;
  flex-direction: column;
  align-content: center;
}
footer p {
  font-size: 1em;
  color: gray;
  text-align: center;
}
@media (min-width: 800px) {
  .container-home .mobile-content {
    display: none;
  }
}
.container-home .container-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  margin-top: 100px;
}
@media (min-width: 800px) {
  .container-home .container-header {
    margin-top: 0px;
  }
  .container-home .container-header .tablet-hidden {
    display: none;
  }
}
.container-home .container-header .header-text h2 {
  font-size: 2em;
  margin-bottom: 15px;
  color: orange;
}
.container-home .container-header .header-text p {
  color: orange;
  font-size: 1.3em;
  line-height: 30px;
}
.container-home .container-header img {
  margin-top: 15px;
  max-width: 100%;
  padding: 5px;
}
@media (min-width: 800px) {
  .container-home .container-header img {
    max-width: 100%;
  }
}
.container-home .container-header .cta {
  display: flex;
  justify-content: center;
  margin: 40px 0;
}
.container-home .container-header .cta button {
  width: 75%;
  background-color: #42f4b9;
  border-color: #42f4b9;
  padding: 10px 0;
  color: #FFFFFF;
  font-size: 2em;
  border-radius: 5px;
}
.container-home .container-header .cta button:hover {
  background-color: orangered;
}
@media (min-width: 800px) {
  .container-home .container-header .cta button {
    display: none;
  }
}
@media (min-width: 800px) {
  .container-home .container-header {
    max-width: 800px;
  }
}
.container-home .container-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 95%;
}
.container-home .container-content .mobile-hidden {
  display: none;
}
@media (min-width: 800px) {
  .container-home .container-content .mobile-hidden {
    display: flex;
  }
}
.container-home .container-content .content-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 95%;
  margin-top: 15px;
}
.container-home .container-content .content-section .text-content {
  width: 95%;
}
.container-home .container-content .content-section .text-content h2 {
  margin-bottom: 15px;
  font-size: 1.5em;
  color: gray;
}
.container-home .container-content .content-section .text-content p {
  margin-bottom: 15px;
  line-height: 25px;
  color: gray;
  font-size: 1.2em;
}
.container-home .container-content img {
  max-width: 100%;
  margin-bottom: 15px;
}
@media (min-width: 800px) {
  .container-home .container-content img {
    max-width: 100%;
  }
}
.container-home .container-content .tablet-btn-cta {
  display: flex;
  justify-content: center;
  margin: 0;
}
.container-home .container-content .tablet-btn-cta button {
  width: 400px;
  background-color: #42f4b9;
  border-color: #42f4b9;
  padding: 10px 0;
  color: #FFFFFF;
  font-size: 2em;
  border-radius: 5px;
}
.container-home .container-content .tablet-btn-cta button:hover {
  background-color: orangered;
}
.container-about .container-header-about {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  margin-top: 50px;
  margin-bottom: 15px;
}
.container-about .container-header-about .header-text-about {
  display: flex;
  flex-direction: row;
  justify-content: center;
}
.container-about .container-header-about .header-text-about h2 {
  font-size: 2em;
  margin-bottom: 15px;
  color: orange;
}
.container-about .container-header-about .header-text-about h2 span {
  color: purple;
}
.container-about .container-header-about #about-header-img {
  display: flex;
  width: 100%;
  flex-direction: row;
  justify-content: center;
}
.container-about .container-header-about #about-header-img img {
  margin-top: 15px;
  max-width: 100%;
}
@media (min-width: 800px) {
  .container-about .container-header-about #about-header-img img {
    max-width: 100%;
  }
}
.container-about .container-content-about {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
}
.container-about .container-content-about .content-section-about .text-content-about {
  width: 95%;
}
.container-about .container-content-about .content-section-about .text-content-about h1 {
  margin-bottom: 15px;
  font-size: 2em;
  color: gray;
}
.container-about .container-content-about .content-section-about .text-content-about h2 {
  margin-bottom: 15px;
  font-size: 1.5em;
  color: gray;
}
.container-about .container-content-about .content-section-about .text-content-about p {
  margin-bottom: 15px;
  line-height: 25px;
  color: gray;
  font-size: 1.2em;
}
.container-about .container-content-about .content-section-about .about {
  border-bottom: 1px solid gray;
}
.dropdown {
  z-index: 2;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  cursor: pointer;
}
.dropdown .dropdown-button {
  padding: 15px;
  border: 3px solid #42f4b9;
  border-radius: 5px;
  background-color: #42f4b9;
  font-size: 40px;
  font-weight: bold;
  color: white;
}
.dropdown .dropdown-button:hover {
  background-color: orangered;
  border-color: orangered;
}
.dropdown .dropdown-content {
  width: 30%;
  position: absolute;
  background-color: #FFFFFF;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 10px;
  border: 2.5px solid orangered;
}
.dropdown .dropdown-link {
  width: 100%;
  text-align: center;
  padding: 15px 0;
  font-size: 18px;
  text-decoration: none;
  color: orangered;
}
.dropdown .dropdown-link:hover {
  color: #FFFFFF;
  background-color: orangered;
}
.dropdown .dropdown-hidden {
  display: none;
}
.tabs .hidden {
  display: none;
}
@media (min-width: 800px) {
  .tabs {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    width: 100%;
    height: 47px;
    background-color: #FFFFFF;
  }
  .tabs .topics {
    display: flex;
    justify-content: none;
    align-items: center;
    flex-direction: row;
  }
  .tabs .topics .tabs-link {
    display: flex;
    justify-content: none;
    align-items: center;
    flex-direction: row;
    color: #FFFFFF;
    background-color: orangered;
    margin: 0 5px;
    padding: 5px 10px;
    font-size: 1em;
    letter-spacing: 2px;
    cursor: pointer;
    font-weight: bold;
  }
  .tabs .topics .tabs-link:hover {
    text-decoration: underline;
    background-color: #42f4b9;
    color: #FFFFFF;
  }
  .tabs .topics .active-tab {
    background-color: #FFFFFF;
    color: #FFFFFF;
    border: 2px solid black;
  }
  .tabs .topics .tabs-link-selected {
    background-color: purple;
  }
}
.tablet-content .tab-item {
  display: none;
  flex-direction: column;
  justify-items: center;
  width: 100%;
  margin-top: -50px;
}
.tablet-content .tab-item .text-content {
  width: 100%;
  text-align: center;
}
.tablet-content .tab-item .text-content h2 {
  margin: 15px 0;
  font-size: 1.5em;
  color: gray;
}
.tablet-content .tab-item .text-content p {
  margin-bottom: 15px;
  line-height: 25px;
  color: gray;
  font-size: 1.2em;
}
.tablet-content .tab-item .img-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 100%;
}
.tablet-content .tab-item .img-content img {
  max-width: 65%;
}
.tablet-content .tabs-item-selected {
  display: block;
}
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
body {
  box-sizing: border-box;
  min-width: 300px;
  max-width: 500px;
  margin: 0 auto;
  padding: 20px;
}
@media (min-width: 800px) {
  body {
    max-width: 800px;
  }
}

